Flare v1.13 (WIP)

Engine fixes:

* Fix enemies not being able to target NPC followers
* Fix loot and sound effects being cleared in StatBlock files with multiple sections
* Fix potential crash when removing summons that would be out-of-bounds on the next map.



Flare v1.12 (https://flarerpg.org/2021/08/02/flare-1-12/)

Engine features:

* NPC interactions are now canceled when the player is attacked. 'combat_aborts_npc_interact' has been added to engine/misc.txt to control this setting.
* Added 'bar_fill_offset' and 'bar_fill_size' to MenuStatBar and MenuEnemy properties.
* Added support for fading out combat text. See the 'fade_duration' property in engine/combat.txt.
* Added 'save_oncutscene' property to engine/misc.txt. Saving before a cutscene was previously controlled with 'save_onload', which caused issues with cutscenes when set to false.
* Added 'save_anywhere' property to engine/misc.txt. This allows for saving via the pause menu. (m7600)
* Added display of enemies, allies, NPCs, and intermap teleport events to the minimap.
* Added support for defining the colors of tiles and entities on the minimap.
* Added 'show_on_minimap' event component. Currently, this only applies to intermap teleport events.
* Added 'show_on_minimap' property to NPCs.
* Properties that take an alignment can now be aligned to the menu frame.
* Support multiple images in animation definitions. (bloodhero)
* Expanded slot widget configuration in engine/widget_settings.txt. Quantity text color can be changed, as well as label settings for displaying hotkeys.
* Re-implemented displaying hotkeys on action bar slots.
* Support for 'item:quantity' syntax for Event properties: 'requires_item', 'requires_not_item', 'remove_item', and 'reward_item'.
* Added 'show_randomize' property to new game menu configuration.
* Added 'disable_equip_slots' property for passive powers.
* 'Block' powers can now use post_power to trigger a power when taking damage.